feat(snapshot): support multi-replica snapshot

feat(snapshot): set plugin command to change volume property, show
max_snapshots in volume query response


fix: rework review comments
