# control-plane/rest/openapi-specs/v0_api_spec.yaml
@@ -1544,6 +1544,40 @@ paths:
           $ref: '#/components/responses/ServerError'
       security:
         - JWT: []
+  '/volumes/{volume_id}/properties/{property_name}/{property_value}':
+    put:
+      tags:
+        - Volumes
+      operationId: put_volume_prop
+      parameters:
+        - in: path
+          name: volume_id
+          required: true
+          schema:
+            $ref: '#/components/schemas/VolumeId'
+        - in: path
+          name: property_name
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: property_value
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Volume'
+        '4XX':
+          $ref: '#/components/responses/ClientError'
+        '5XX':
+          $ref: '#/components/responses/ServerError'
+      security:
+        - JWT: []
   '/volumes/{volume_id}/target':
     put:
       tags:
@@ -2521,6 +2555,7 @@ components:
         thin: false
         topology: null
         affinity_group: null
+        max_snapshots: 10
       description: Create Volume Body
       type: object
       properties:
@@ -2551,6 +2586,11 @@ components:
           description: Affinity Group related information.
           allOf:
             - $ref: '#/components/schemas/AffinityGroup'
+        max_snapshots:
+          description: Max Snapshots limit per volume.
+          type: integer
+          format: int32
+          minimum: 0
       required:
         - policy
         - replicas
@@ -3356,6 +3396,7 @@ components:
         target_node: io-engine-1
         uuid: 514ed1c8-7174-49ac-b9cd-ad44ef670a67
         thin: false
+        max_snapshots: 10
       description: User specification of a volume.
       type: object
       properties:
@@ -3393,6 +3434,7 @@ components:
                 - CreateSnapshot
                 - DestroySnapshot
                 - Resize
+                - SetVolumeProperty
             result:
               description: Result of the operation
               type: boolean
@@ -3427,6 +3469,11 @@ components:
           $ref: '#/components/schemas/VolumeContentSource'
         num_snapshots:
           description: Number of snapshots taken on this volume.
+          type: integer
+          format: int32
+          minimum: 0
+        max_snapshots:
+          description: Max snapshots to limit per volume.
           type: integer
           format: int32
           minimum: 0
@@ -3754,6 +3801,11 @@ components:
           type: integer
           format: int32
           minimum: 0
+        num_snapshot_replicas:
+          description: Number of snapshot replicas for a volumesnapshot.
+          type: integer
+          format: int32
+          minimum: 0
       required:
         - status
         - size
@@ -3762,6 +3814,7 @@ components:
         - txn_id
         - transactions
         - num_restores
+        - num_snapshot_replicas
     VolumeSnapshotSpec:
       description: |-
         Volume Snapshot Spec information.
